--- a/bin/basic.html
+++ b/bin/basic.html
@@ -217,6 +217,18 @@
 <center><i><b>print hex$(154)</b></i></center
 <br />
 <div> prints 9A</div>
+<h1 style="background-color:cyan;"><center>inkey$()</center></h1>
+<div>Returns either an empty string if there is no keypress available, or a single character which is the next key in the keyboard queue. </div>
+<br />
+<center><i><b>print asc(inkey$())</b></i></center
+<br />
+<div> prints 0 (or the ASCII code of the key)</div>
+<h1 style="background-color:cyan;"><center>input</center></h1>
+<div>Inputs values into variables. The syntax is the same as print, so semicolons, colons and quoted text works as normal. </div>
+<br />
+<center><i><b>INPUT "Enter your name ";a$</b></i></center
+<br />
+<div></div>
 <h1 style="background-color:cyan;"><center>int(n)</center></h1>
 <div>Returns the integer part of the number, e.g. without the fractional part.</div>
 <br />
