--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -121,7 +121,7 @@
 <center><i><b>print asc("!")</b></i></center
 <br />
 <div> prints 33</div>
-<h1 style="background-color:cyan;"><center>assert(expr)</center></h1>
+<h1 style="background-color:cyan;"><center>assert expr</center></h1>
 <div>Assert asserts a contract and is useful for parameter validation and testing. It evaluates the provided expression, and providing it is non zero. If it is zero, an error occurs.</div>
 <br />
 <div>An example use might be </div>
@@ -130,7 +130,7 @@
 <br />
 <div> to check that a name has been provided to a routine.</div>
 <h1 style="background-color:cyan;"><center>call</center></h1>
-<div>Call a named procedure </div>
+<div>Call a named procedure. The brackets are required. </div>
 <br />
 <center><i><b>call draw.everything()</b></i></center
 <br />
@@ -143,8 +143,14 @@
 <center><i><b>print chr$(42)</b></i></center
 <br />
 <div> prints *</div>
-<h1 style="background-color:cyan;"><center>clr</center></h1>
-<div>Clear effectively resets the BASIC interpreter without actually restarting the program. It erases all variables and arrays, resets the stack and memory allocation, and checks for callable procedures. It should not normally be used as the RUN command does this as well.</div>
+<h1 style="background-color:cyan;"><center>clear <address></center></h1>
+<div>Clear effectively resets the BASIC interpreter without actually restarting the program. It erases all variables and arrays, resets the stack and memory allocation, and checks for callable procedures. It should not normally be used as the RUN command does this as well. CLEAR takes an optional parameter which sets the high memory address for BASIC to use, so CLEAR $7E00 will mean any memory above $7E00 will not be used ; the stack and string will be placed there.</div>
+<h1 style="background-color:cyan;"><center>data (data)</center></h1>
+<div>Data for read statements. Note the string data must be enclosed in quotes. </div>
+<br />
+<center><i><b>data "Fred Smith",42,123456</b></i></center
+<br />
+<div></div>
 <h1 style="background-color:cyan;"><center>dec(string)</center></h1>
 <div>Converts the string to an integer, assuming hexadecimal format</div>
 <br />
@@ -217,6 +223,18 @@
 <center><i><b>print hex$(154)</b></i></center
 <br />
 <div> prints 9A</div>
+<h1 style="background-color:cyan;"><center>if (test) then (code)</center></h1>
+<div>Executes the rest of the line if the test is true, otherwise goes to the next line. Same as standard BASIC. </div>
+<br />
+<center><i><b>if n % 2 = 0 then print n;" is even"</b></i></center
+<br />
+<div></div>
+<h1 style="background-color:cyan;"><center>if test :(code):else (code):endif</center></h1>
+<div>An extended multi line nestable if .. then ... else ... endif structure. The else clause is optional. An example is shown below ; this could be spread out over multiple lines. Note the absence of THEN ; this is the syntactic difference between the two. </div>
+<br />
+<center><i><b>if n % 2 = 0:print n;" is even":else:print n;"is odd":endif</b></i></center
+<br />
+<div></div>
 <h1 style="background-color:cyan;"><center>inkey$()</center></h1>
 <div>Returns either an empty string if there is no keypress available, or a single character which is the next key in the keyboard queue. </div>
 <br />
@@ -311,10 +329,10 @@
 <center><i><b>PRINT "Hello";name$,"tabbed" for example.</b></i></center
 <br />
 <div></div>
-<h1 style="background-color:cyan;"><center>proc <name> ... endproc</center></h1>
+<h1 style="background-color:cyan;"><center>proc (name)() ... endproc</center></h1>
 <div>Defines a procedure. A procedure definition must be the first thing on the line. </div>
 <br />
-<center><i><b>proc bump.me:a = a+1:endproc</b></i></center
+<center><i><b>proc bump.me():a = a+1:endproc</b></i></center
 <br />
 <div></div>
 <h1 style="background-color:cyan;"><center>rand(number)</center></h1>
@@ -325,8 +343,14 @@
 <center><i><b>print rand(4)</b></i></center
 <br />
 <div> prints one of 0,1,2 or 3.</div>
+<h1 style="background-color:cyan;"><center>read (variables)</center></h1>
+<div>Read data from data statements into variables. The types must match </div>
+<br />
+<center><i><b>read name$,age,salary</b></i></center
+<br />
+<div></div>
 <h1 style="background-color:cyan;"><center>rem</center></h1>
-<div>REM inserts comments in code. It is slightly different from most basics in that it requires the text of the REM statement to be in quotes, though later tokenisers will do this automatically</div>
+<div>REM inserts comments in code. It is slightly different from most basics in that it requires the text of the REM statement to be in quotes. The tokeniser will do this for you, so if you type REM this is a comment it will convert it to REM "this is a comment"</div>
 <br />
 <div>It is purely informative ; there are two forms, </div>
 <br />
@@ -334,7 +358,7 @@
 <br />
 <div> without a comment and </div>
 <br />
-<center><i><b>REM "<description>"</b></i></center
+<center><i><b>REM "comment text"</b></i></center
 <br />
 <div> with a comment.</div>
 <br />
@@ -349,6 +373,8 @@
 <center><i><b>c = 5:repeat:c = c-1:print c:until c = 0</b></i></center
 <br />
 <div></div>
+<h1 style="background-color:cyan;"><center>restore</center></h1>
+<div>Reset the READ/DATA position to the start.</div>
 <h1 style="background-color:cyan;"><center>right$(string,count)</center></h1>
 <div>Returns the rightmost 'count' characters of a string.</div>
 <br />
