--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -215,6 +215,10 @@
 <center><i><b>print frac(-4.3) , frac(5.6)</b></i></center
 <br />
 <div> prints 0.3 0.6</div>
+<h1 style="background-color:cyan;"><center>gosub...return</center></h1>
+<div>Subroutine call. Provided for backward compatibility ; please use PROC and CALL.</div>
+<h1 style="background-color:cyan;"><center>goto line</center></h1>
+<div>Transfer execution to given line number. Not recommended except for old software. Please use the structures provided.</div>
 <h1 style="background-color:cyan;"><center>hex$(n)</center></h1>
 <div>Converts the integer to a hexadecimal string equivalent</div>
 <br />
