--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -1,10 +1,10 @@
 <html><head></head><body>
-<h1 style="background-color:cyan;"><center>$</center></h1>
-<div>$ is used as a hexadecimal marker, so if you have $7FFE in your code it is the same as the constant 32766. This can improve readability.</div>
+<h1 style="background-color:cyan;"><center>&</center></h1>
+<div>& is used as a hexadecimal marker, so if you have &7FFE in your code it is the same as the constant 32766. This can improve readability.</div>
 <br />
 <div></div>
 <br />
-<center><i><b>print $2a</b></i></center
+<center><i><b>print &2a</b></i></center
 <br />
 <div> prints 42</div>
 <h1 style="background-color:cyan;"><center>*</center></h1>
