--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -175,6 +175,8 @@
 <center><i><b>dim name$(10),age(10): dim grid(8,8)</b></i></center
 <br />
 <div></div>
+<h1 style="background-color:cyan;"><center>dir</center></h1>
+<div>Lists files on the current storage media</div>
 <h1 style="background-color:cyan;"><center>div</center></h1>
 <div>Binary operator, divides two numbers and returns an integer result. This is useful because BASIC is faster with integers.</div>
 <br />
