--- a/applications/basic/documents/basic.html
+++ b/applications/basic/documents/basic.html
@@ -199,6 +199,8 @@
 <div></div>
 <h1 style="background-color:cyan;"><center>end</center></h1>
 <div>Ends the current program and returns to the main prompt.</div>
+<h1 style="background-color:cyan;"><center>erase <file></center></h1>
+<div>Deletes a file on the current storage media.</div>
 <h1 style="background-color:cyan;"><center>for .. next</center></h1>
 <div>Repeats a block of code a given number of times. The index variable (I in the examples) starts at the first value and counts towards the second. The step is 1 by default, but can be any number. </div>
 <br />
