--- a/applications/basic/documents/basic.html
+++ b/applications/basic/documents/basic.html
@@ -289,6 +289,8 @@
 <div></div>
 <h1 style="background-color:cyan;"><center>list start,end</center></h1>
 <div>Program listing. Start and end are optional.</div>
+<h1 style="background-color:cyan;"><center>load <file>,<address></center></h1>
+<div>Loads a program file to the given address, if no address is provided it is assumed to be a BASIC program.</div>
 <h1 style="background-color:cyan;"><center>mid$(string,start<,count>)</center></h1>
 <div>Returns a substring of a string. start is the start position, which is indexed from 1. The count parameter, which is optional is the number of characters to extract.</div>
 <br />
