--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -199,6 +199,8 @@
 <div></div>
 <h1 style="background-color:cyan;"><center>end</center></h1>
 <div>Ends the current program and returns to the main prompt.</div>
+<h1 style="background-color:cyan;"><center>erase <file></center></h1>
+<div>Deletes a file on the current storage media.</div>
 <h1 style="background-color:cyan;"><center>for .. next</center></h1>
 <div>Repeats a block of code a given number of times. The index variable (I in the examples) starts at the first value and counts towards the second. The step is 1 by default, but can be any number. </div>
 <br />
@@ -287,6 +289,8 @@
 <div></div>
 <h1 style="background-color:cyan;"><center>list start,end</center></h1>
 <div>Program listing. Start and end are optional.</div>
+<h1 style="background-color:cyan;"><center>load <file>,<address></center></h1>
+<div>Loads a program file to the given address, if no address is provided it is assumed to be a BASIC program.</div>
 <h1 style="background-color:cyan;"><center>mid$(string,start<,count>)</center></h1>
 <div>Returns a substring of a string. start is the start position, which is indexed from 1. The count parameter, which is optional is the number of characters to extract.</div>
 <br />
