--- a/applications/basic/documents/basic.html
+++ b/applications/basic/documents/basic.html
@@ -403,6 +403,8 @@
 <div> prints , say 0.6307</div>
 <h1 style="background-color:cyan;"><center>run</center></h1>
 <div>Runs the current program, clearing all variables and arrays first.</div>
+<h1 style="background-color:cyan;"><center>save <file>,<address>,<size></center></h1>
+<div>Saves a block of memory, the default is the BASIC program</div>
 <h1 style="background-color:cyan;"><center>sgn(n)</center></h1>
 <div>Returns the sign of the number n ; 0 if zero, -1 if negative, 1 if positive and not zero</div>
 <br />
