Renumber, old line editor

--- a/applications/basic/documents/basic.html
+++ b/applications/basic/documents/basic.html
@@ -377,6 +377,8 @@
 <center><i><b>REM "Calculate the players initial positions"</b></i></center
 <br />
 <div></div>
+<h1 style="background-color:cyan;"><center>renumber <start></center></h1>
+<div>Simple renumberer. Does *not* handle GOTO or GOSUB, so don't use it if you use these commands, which should only be for already existing type ins. The start is optional, and defaults to 1000.</div>
 <h1 style="background-color:cyan;"><center>repeat .. until</center></h1>
 <div>Repeats a block of code until a condition is true. </div>
 <br />
