--- a/applications/basic/documents/basic.html
+++ b/applications/basic/documents/basic.html
@@ -315,6 +315,8 @@
 <div> will display 3</div>
 <h1 style="background-color:cyan;"><center>new</center></h1>
 <div>Erase current program and variables and then return to command line.</div>
+<h1 style="background-color:cyan;"><center>opt expr</center></h1>
+<div>Sets assembly options. Bit 0 indicates whether the listing should be displayed or not. Bit 1 indicates the pass (0 or 1). When pass is set (e.g. OPT 2 or OPT 3) then errors on the "second pass" of assembler code are enabled - branch ranges, valid addresses labels defined and so on.</div>
 <h1 style="background-color:cyan;"><center>or</center></h1>
 <div>Bitwise or of two numbers, which must be integers.</div>
 <h1 style="background-color:cyan;"><center>peek(n)</center></h1>
