--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -103,6 +103,8 @@
 <center><i><b>print 16 >> 3</b></i></center
 <br />
 <div> would print 2</div>
+<h1 style="background-color:cyan;"><center>][</center></h1>
+<div>Boot the Apple 2</div>
 <h1 style="background-color:cyan;"><center>abs(n)</center></h1>
 <div>Returns the absolute value of the parameter</div>
 <br />
